# rapid

./: .gitignore  pyproject.toml  readme.md  setup.py
examples/: manage.py  ner_transformer.py  transformers_example.py
rapid/: __init__.py  app.py  exception.py  exceptions.py  handlers.py  logger.py  models.py  utils.py
tests/: test_app.py
