[tool.poetry]
name = "rapid"
version = "0.1.0"
description = "A framework for rapidly turn models into http application"

license = "MIT"

authors = [
    "Wang tao <wym0604@163.com>"
]

readme = 'readme.md'

repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/python-poetry/poetry"

keywords = ['packaging', 'rapid']

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
sanic = { version = "^20.6.3"}
loguru = { version = "^0.5.1"}


[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.1"

